# wip-qt

./: .dir-locals.el  .gitignore  .gitmodules  .metadata  CMakeLists.txt  CMakeLists.txt.user.efc1ca9  CMakeSettings.json  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  compile_commands.json  osab-qt.kdev4  pubspec.yaml
.cache/clangd/index/: base_widgets.h.09FB69EA77578145.idx  base_widgets.h.1F967FC6FE0583B4.idx  initial.h.69F8E57368132548.idx  initial.h.C19EC160FE7E8C8A.idx  main.cpp.12DCA075C2E32864.idx  main.cpp.366369FC26F79889.idx  mainwin.cpp.181699BFACA4DA12.idx  mainwin.h.BB74BE91328A75F6.idx  mocs_compilation.cpp.B34D71342CD0A0A2.idx
.kdev4/: osab-qt.kdev4
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/osab/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
docs/: map_concept.md  ui_layout.md
include/: base_widgets.h  db.h  initial.h  main.h
include/geo/: grid.h  map.h  render.h  shapes.h
include/parser/: info.h  line_numbers.h  parser.h  qt_vis_parser.h  types.h  url_parser.h  utils.h
include/utils/: apps.h  cleaner.h  psuedo_uuid_gen.h  qml_update.h
include/widgets/: base_widgets.h  dashboard.h  initial.h
include/widgets/initial/: tab1.h  tabs.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/build-vis_parser-Desktop_Qt_6_1_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
lib/build-vis_parser-Desktop_Qt_6_1_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-7d1702fc3a65cfd4103c.json  codemodel-v2-35de027d0cf99af7b4f7.json  index-2021-07-20T15-14-38-0789.json  target-VISL-Debug-7471a0f246fdf982a1f8.json
lib/build-vis_parser-Desktop_Qt_6_1_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-9465963383cfa7882129.json  cmakeFiles-v1-738f5ba2c2e119d28efd.json  codemodel-v2-cef9009edd43783ce755.json  index-2021-07-20T15-08-32-0518.json  target-VISL-Debug-c1af034e18909dea6123.json
lib/db/: actions.dart  db.dart
lib/map/: map.dart
lib/material/: home.dart
lib/material/pages/: control.dart  control.dart~  dashboard.dart  settings.dart
lib/material/pages/dashboard/: cards.dart
lib/material/pages/settings/: device.dart  profile.dart
lib/material/pages/settings/device/: device_card.dart  edit_page.dart
lib/material/pages/settings/device/edit_page/: edit_page_name_field.dart  star_icon_button.dart  star_icon_button.dart~
lib/material/styles/: text.dart
lib/meta/: navigation.dart
lib/ui/: dashboard.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
notes/: db_ids.md
qml/: initial.qml  qml.qrc
qml/snippets/: GridWrapper.qml  LineNumbers.qml  MapBox.qml
qml/tabs/: DashBoard.qml  MapQML.qml  VisUtil.qml
scripts/: .gen_shaders-unix.sh.un~  gen_shaders-unix.sh  gen_shaders-unix.sh~
src/: db.cpp  initial.cpp  main.cpp  qml.qrc
src/geo/: grid.cpp  map.cpp  render.cpp  shapes.cpp
src/geo/shader/: grid.frag  grid.frag.qsb  grid.vert  grid.vert.qsb  map.frag  map.frag.qsb  map.vert  map.vert.qsb
src/opengl/: map.frag
src/parser/: line_numbers.cpp  parser.cpp  qt_vis_parser.cpp  url_parser.cpp  utils.cpp
src/qml/: initial.qml
src/qml/settings/: Settings.qml
src/qml/snippets/: GridWrapper.qml  HeaderSnip.qml
src/qml/tabs/: DashBoard.qml  DevInfo.qml  MapQML.qml  VisUtil.qml
src/utils/: apps.cpp  cleaner.cpp  psuedo_uuid_gen.cpp  qml_update.cpp
src/widgets/: base_widgets.cpp  dashboard.cpp  initial.cpp
src/widgets/initial/: tabs.cpp
test/: main.vis  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
